--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
       <section class="restaurant-list">
         <div class="location">
           <div class="content">
+            <div class="box1">
             <h1>Bakalaki Greek Taverna</h1>
             <h3>Seng Poh Road 3, Singapore</h3>
+            </div>
           </div>
           <div class="arrow">
             <i class="fa fa-chevron-right fa-2x" aria-hidden="true"></i>
@@ -26,80 +28,98 @@
         </div>
         <div class="location">
           <div class="content">
+            <div class="box1">
             <h1>Entre-Nous Creperie</h1>
             <h3>27 Seah Street #01-01, Singapore</h3>
           </div>
+          </div>
           <div class="arrow">
             <i class="fa fa-chevron-right fa-2x" aria-hidden="true"></i>
           </div>
         </div>
         <div class="location">
           <div class="content">
+            <div class="box1">
             <h1>Fratini La Trattoria</h1>
             <h3>10 Greenwood Avenue, Singapore</h3>
           </div>
+          </div>
           <div class="arrow">
             <i class="fa fa-chevron-right fa-2x" aria-hidden="true"></i>
           </div>
         </div>
         <div class="location">
           <div class="content">
+            <div class="box1">
             <h1>Rhubarb</h1>
             <h3>3 Duxton Hill, Singapore</h3>
           </div>
+          </div>
           <div class="arrow">
             <i class="fa fa-chevron-right fa-2x" aria-hidden="true"></i>
           </div>
         </div>
         <div class="location">
           <div class="content">
+            <div class="box1">
             <h1>Colony</h1>
             <h3>7 Raffles Avenue, The Ritz-Carlton, Singapore</h3>
           </div>
+          </div>
           <div class="arrow">
             <i class="fa fa-chevron-right fa-2x" aria-hidden="true"></i>
           </div>
         </div>
         <div class="location">
           <div class="content">
+            <div class="box1">
             <h1>Alma By Juan Amador</h1>
             <h3>22 Scotts Road, Goodwood Park Hotel, Singapore</h3>
           </div>
+          </div>
           <div class="arrow">
             <i class="fa fa-chevron-right fa-2x" aria-hidden="true"></i>
           </div>
         </div>
         <div class="location">
           <div class="content">
+            <div class="box1">
             <h1>Summer Pavilion</h1>
             <h3>7 Raffles Avenue, The Ritz-Carlton, Singapore</h3>
           </div>
+          </div>
           <div class="arrow">
             <i class="fa fa-chevron-right fa-2x" aria-hidden="true"></i>
           </div>
         </div>
         <div class="location">
           <div class="content">
+            <div class="box1">
             <h1>My Awesome Cafe</h1>
             <h3>Telok Ayer Street, Singapore</h3>
           </div>
+          </div>
           <div class="arrow">
             <i class="fa fa-chevron-right fa-2x" aria-hidden="true"></i>
           </div>
         </div>
         <div class="location">
           <div class="content">
+            <div class="box1">
             <h1>MTR Restaurant</h1>
             <h3>438 Serangoon Road #438, Singapore</h3>
           </div>
+          </div>
           <div class="arrow">
             <i class="fa fa-chevron-right fa-2x" aria-hidden="true"></i>
           </div>
         </div>
         <div class="location">
           <div class="content">
+            <div class="box1">
             <h1>The Curry Culture</h1>
             <h3>31 Cuppage Road Cuppage Terrace, Singapore</h3>
+          </div>
           </div>
           <div class="arrow">
             <i class="fa fa-chevron-right fa-2x" aria-hidden="true"></i>
